# fireplay

./: .gitignore  pyproject.toml
src/fireplay/: __init__.py  main.py  services.py
src/fireplay/media/: models.py
src/fireplay/mp3/: service.py
test/: conftest.py
test/unit/media/: test_media_file.py
